refactoring and logging improvements