@@ -29,6 +29,7 @@ import password.pwm.error.PwmUnrecoverableException;
 import password.pwm.http.ContextManager;
 import password.pwm.http.HttpHeader;
 import password.pwm.http.HttpMethod;
+import password.pwm.http.PwmURL;
 import password.pwm.svc.httpclient.PwmHttpClient;
 import password.pwm.svc.httpclient.PwmHttpClientConfiguration;
 import password.pwm.svc.httpclient.PwmHttpClientRequest;
@@ -42,6 +43,7 @@ import password.pwm.util.logging.PwmLogger;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.time.Instant;
 import java.util.Collections;
@@ -95,7 +97,9 @@ class WordlistSource
         final String importUrl = wordlistConfiguration.getAutoImportUrl();
         return new WordlistSource( WordlistSourceType.AutoImport, importUrl, () ->
         {
-            if ( importUrl.startsWith( "http" ) )
+            final URI uri = URI.create( importUrl );
+
+            if ( PwmURL.uriSchemeMatches( uri, PwmURL.Scheme.http, PwmURL.Scheme.https ) )
             {
                 final boolean promiscuous = Boolean.parseBoolean( pwmApplication.getConfig().readAppProperty( AppProperty.HTTP_CLIENT_PROMISCUOUS_WORDLIST_ENABLE ) );
                 final PwmHttpClientConfiguration pwmHttpClientConfiguration = PwmHttpClientConfiguration.builder()
@@ -105,16 +109,21 @@ class WordlistSource
                 return client.streamForUrl( wordlistConfiguration.getAutoImportUrl() );
             }
 
-            try
+            if ( PwmURL.uriSchemeMatches( uri, PwmURL.Scheme.file ) )
             {
-                final URL url = new URL( importUrl );
-                return url.openStream();
+                try
+                {
+                    final URL url = URI.create( importUrl ).toURL();
+                    return url.openStream();
+                }
+                catch ( final IOException e )
+                {
+                    final String msg = "unable to open auto-import URL: " + e.getMessage();
+                    throw PwmUnrecoverableException.newException( PwmError.ERROR_WORDLIST_IMPORT_ERROR, msg );
+                }
             }
-            catch ( final IOException e )
-            {
-                final String msg = "unable to open auto-import URL: " + e.getMessage();
-                throw PwmUnrecoverableException.newException( PwmError.ERROR_WORDLIST_IMPORT_ERROR, msg );
-            }
+
+            throw new IllegalArgumentException( "can't auto-import protocol scheme '" + uri.getScheme() + "'" );
         }
         );
     }
